--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+:root {
+  --background: #c1121f;
+  --foreground: #fff;
+  --default-transition-duration: 0.3s;
+}
+
+body {
+  background: var(--background);
+  color: var(--foreground);
+  font-family: Poppins, Helvetica, sans-serif;
+}
